# bcryptcpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
include/: bcrypt.h  bcryptcpp.h  errors.h  errors.hpp
src/: bcrypt.cpp  bcryptcpp.cpp  legacy.h  main.cpp
test/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
